src/main/resources/k8s/finalLab/finallab3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  deploy
  namespace: default
  labels:
    app:  deploy
spec:
  selector:
    matchLabels:
      app: deploy
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  deploy
    spec:
      serviceAccountName: deployment-admin-service-account
      containers:
      - name:  deploy
        image:  devopslabss/registry-secret:rbac
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  80
          name:  deploy
        command: ["/bin/sh", "-c", "sleep infinity"]
