src/main/resources/k8s/finalLab/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: nginx
  name: nginx
spec:
  type: NodePort
  selector: 
    app: nginx
  ports:
    - name: "80"
      port: 80
