src/main/resources/k8s/finalLab/finallab2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 1
        resources:
          requests:
            memory: "50Mi"
            cpu: "150m"
          limits:
            memory: "50Mi"
            cpu: "150m"
        volumeMounts:
        - name: index-html-volume
          mountPath: /usr/share/nginx/html
        - name: cache-volume
          mountPath: /cache
        - name: persistent-volume
          mountPath: /persistent
      volumes:
      - name: index-html-volume
        configMap:
          name: index-html
      - name: cache-volume
        emptyDir: {}
      - name: persistent-volume
        persistentVolumeClaim:
          claimName: persistent
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: "k8s.training.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: nginx
          servicePort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
