src/main/resources/k8s/finalLab/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-1
spec:
  rules:
  - host: k8s.training.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: nginx
          servicePort: 80
